l-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: librespeed
  ports:
    - protocol: TCP
      name: http
      port: 80 
      targetPort: 80
      nodePort: 30080
