m-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: db
  labels:
    app: db
spec:
  clusterIP: None # Headless service.
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: db
