l-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: librepeed-ingress 
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed 
spec:
  rules:
    - host: 158.160.10.155.nip.io #speedtest.local
      http:
        paths:
          - path : /
            pathType : Prefix 
            backend :
              service :
                name : librespeed 
                port :
                  number : 80
